# google-ads-intent-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json
.github/workflows/: ci.yml  pypi.yml
docs/: pypi-publishing.md
examples/: claude-desktop.json  hermes.yaml  search_terms.csv
src/google_ads_intent_mcp/: __init__.py  agent.py  brand.py  cli.py  csv_io.py  intent.py  mcp_server.py  negatives.py
tests/: test_brand.py  test_google_ads_intent_mcp.py  test_intent_coverage.py  test_metadata.py
